tool_sources = files(
    'src/core/tools/tool_merge_duplicate_junctions.cpp',
    'src/core/tools/tool_move.cpp',
    'src/core/tools/tool_place_junction.cpp',
    'src/core/tools/tool_place_junction_schematic.cpp',
    'src/core/tools/tool_draw_line.cpp',
    'src/core/tools/tool_delete.cpp',
    'src/core/tools/tool_draw_arc.cpp',
    'src/core/tools/tool_map_pin.cpp',
    'src/core/tools/tool_map_symbol.cpp',
    'src/core/tools/tool_draw_line_net.cpp',
    'src/core/tools/tool_place_text.cpp',
    'src/core/tools/tool_place_net_label.cpp',
    'src/core/tools/tool_disconnect.cpp',
    'src/core/tools/tool_bend_line_net.cpp',
    'src/core/tools/tool_move_net_segment.cpp',
    'src/core/tools/tool_place_power_symbol.cpp',
    'src/core/tools/tool_edit_symbol_pin_names.cpp',
    'src/core/tools/tool_place_bus_label.cpp',
    'src/core/tools/tool_place_bus_ripper.cpp',
    'src/core/tools/tool_manage_buses.cpp',
    'src/core/tools/tool_draw_polygon.cpp',
    'src/core/tools/tool_draw_plane.cpp',
    'src/core/tools/tool_enter_datum.cpp',
    'src/core/tools/tool_place_hole.cpp',
    'src/core/tools/tool_place_pad.cpp',
    'src/core/tools/tool_paste.cpp',
    'src/core/tools/tool_assign_part.cpp',
    'src/core/tools/tool_clear_part.cpp',
    'src/core/tools/tool_map_package.cpp',
    'src/core/tools/tool_draw_track.cpp',
    'src/core/tools/tool_place_via.cpp',
    'src/core/tools/tool_drag_keep_slope.cpp',
    'src/core/tools/tool_add_part.cpp',
    'src/core/tools/tool_smash.cpp',
    'src/core/tools/tool_place_shape.cpp',
    'src/core/tools/tool_edit_shape.cpp',
    'src/core/tools/tool_import_dxf.cpp',
    'src/core/tools/tool_edit_pad_parameter_set.cpp',
    'src/core/tools/tool_draw_polygon_rectangle.cpp',
    'src/core/tools/tool_draw_line_rectangle.cpp',
    'src/core/tools/tool_edit_line_rectangle.cpp',
    'src/core/tools/tool_draw_line_circle.cpp',
    'src/core/tools/tool_helper_map_symbol.cpp',
    'src/core/tools/tool_helper_move.cpp',
    'src/core/tools/tool_helper_merge.cpp',
    'src/core/tools/tool_helper_collect_nets.cpp',
    'src/core/tools/tool_helper_plane.cpp',
    'src/core/tools/tool_edit_via.cpp',
    'src/core/tools/tool_rotate_arbitrary.cpp',
    'src/core/tools/tool_edit_plane.cpp',
    'src/core/tools/tool_update_all_planes.cpp',
    'src/core/tools/tool_draw_dimension.cpp',
    'src/core/tools/tool_select_connected_lines.cpp',
    'src/core/tools/tool_set_diffpair.cpp',
    'src/core/tools/tool_set_via_net.cpp',
    'src/core/tools/tool_lock.cpp',
    'src/core/tools/tool_add_vertex.cpp',
    'src/core/tools/tool_place_board_hole.cpp',
    'src/core/tools/tool_edit_board_hole.cpp',
    'src/core/tools/tool_generate_courtyard.cpp',
    'src/core/tools/tool_generate_silkscreen.cpp',
    'src/core/tools/tool_set_group.cpp',
    'src/core/tools/tool_swap_nets.cpp',
    'src/core/tools/tool_line_loop_to_polygon.cpp',
    'src/core/tools/tool_lines_to_tracks.cpp',
    'src/core/tools/tool_change_unit.cpp',
    'src/core/tools/tool_helper_line_width_setting.cpp',
    'src/core/tools/tool_set_nc_all.cpp',
    'src/core/tools/tool_set_nc.cpp',
    'src/core/tools/tool_add_keepout.cpp',
    'src/core/tools/tool_helper_draw_net_setting.cpp',
    'src/core/tools/tool_helper_get_symbol.cpp',
    'src/core/tools/tool_change_symbol.cpp',
    'src/core/tools/tool_place_refdes_and_value.cpp',
    'src/core/tools/tool_helper_restrict.cpp',
    'src/core/tools/tool_draw_polygon_circle.cpp',
    'src/core/tools/tool_draw_connection_line.cpp',
    'src/core/tools/tool_backannotate_connection_lines.cpp',
    'src/core/tools/tool_import_kicad_package.cpp',
    'src/core/tools/tool_smash_silkscreen_graphics.cpp',
    'src/core/tools/tool_renumber_pads.cpp',
    'src/core/tools/tool_fix.cpp',
    'src/core/tools/tool_nopopulate.cpp',
    'src/core/tools/tool_polygon_to_line_loop.cpp',
    'src/core/tools/tool_place_board_panel.cpp',
    'src/core/tools/tool_smash_panel_outline.cpp',
    'src/core/tools/tool_smash_package_outline.cpp',
    'src/core/tools/tool_resize_symbol.cpp',
    'src/core/tools/tool_round_off_vertex.cpp',
    'src/core/tools/tool_swap_gates.cpp',
    'src/core/tools/tool_place_picture.cpp',
    'src/core/tools/tool_place_decal.cpp',
    'src/core/tools/tool_drag_polygon_edge.cpp',
    'src/core/tools/tool_measure.cpp',
    'src/core/tools/tool_edit_custom_value.cpp',
    'src/core/tools/tool_place_dot.cpp',
    'src/core/tools/tool_set_track_width.cpp',
    'src/core/tools/tool_settings_rectangle_mode.cpp',
    'src/core/tools/tool_exchange_gates.cpp',
    'src/core/tools/tool_map_port.cpp',
    'src/core/tools/tool_add_block_instance.cpp',
    'src/core/tools/tool_helper_save_placements.cpp',
    'src/core/tools/tool_align_and_distribute.cpp',
    'src/core/tools/tool_helper_edit_plane.cpp',
    'src/core/tools/tool_manage_power_nets.cpp',
    'src/core/tools/tool_edit_text.cpp',
    'src/core/tools/tool_tie_nets.cpp',
    'src/core/tools/tool_draw_net_tie.cpp',
    'src/core/tools/tool_flip_net_tie.cpp',
    'src/core/tools/tool_move_track_connection.cpp',
    'src/core/tools/tool_helper_pick_pad.cpp',
    'src/core/tools/tool_move_track_center.cpp',
    'src/core/tools/tool_paste_placement.cpp',
    'src/core/tools/tool_paste_part.cpp',
    'src/core/tools/tool_route_track_interactive.cpp',
)
