src_tools = files(
    'tool_merge_duplicate_junctions.cpp',
    'tool_move.cpp',
    'tool_place_junction.cpp',
    'tool_place_junction_schematic.cpp',
    'tool_draw_line.cpp',
    'tool_delete.cpp',
    'tool_draw_arc.cpp',
    'tool_map_pin.cpp',
    'tool_map_symbol.cpp',
    'tool_draw_line_net.cpp',
    'tool_place_table.cpp',
    'tool_place_text.cpp',
    'tool_place_net_label.cpp',
    'tool_disconnect.cpp',
    'tool_bend_line_net.cpp',
    'tool_move_net_segment.cpp',
    'tool_place_power_symbol.cpp',
    'tool_edit_symbol_pin_names.cpp',
    'tool_place_bus_label.cpp',
    'tool_place_bus_ripper.cpp',
    'tool_manage_buses.cpp',
    'tool_draw_polygon.cpp',
    'tool_draw_plane.cpp',
    'tool_enter_datum.cpp',
    'tool_place_hole.cpp',
    'tool_place_pad.cpp',
    'tool_paste.cpp',
    'tool_assign_part.cpp',
    'tool_clear_part.cpp',
    'tool_map_package.cpp',
    'tool_draw_track.cpp',
    'tool_place_via.cpp',
    'tool_drag_keep_slope.cpp',
    'tool_add_part.cpp',
    'tool_smash.cpp',
    'tool_place_shape.cpp',
    'tool_edit_shape.cpp',
    'tool_import_dxf.cpp',
    'tool_edit_pad_parameter_set.cpp',
    'tool_draw_polygon_rectangle.cpp',
    'tool_draw_line_rectangle.cpp',
    'tool_edit_line_rectangle.cpp',
    'tool_draw_line_circle.cpp',
    'tool_helper_map_symbol.cpp',
    'tool_helper_move.cpp',
    'tool_helper_merge.cpp',
    'tool_helper_collect_nets.cpp',
    'tool_helper_plane.cpp',
    'tool_edit_via.cpp',
    'tool_rotate_arbitrary.cpp',
    'tool_edit_plane.cpp',
    'tool_update_all_planes.cpp',
    'tool_draw_dimension.cpp',
    'tool_select_connected_lines.cpp',
    'tool_set_diffpair.cpp',
    'tool_set_via_net.cpp',
    'tool_lock.cpp',
    'tool_add_vertex.cpp',
    'tool_place_board_hole.cpp',
    'tool_edit_board_hole.cpp',
    'tool_generate_courtyard.cpp',
    'tool_generate_silkscreen.cpp',
    'tool_set_group.cpp',
    'tool_swap_nets.cpp',
    'tool_line_loop_to_polygon.cpp',
    'tool_lines_to_tracks.cpp',
    'tool_change_unit.cpp',
    'tool_helper_line_width_setting.cpp',
    'tool_set_nc_all.cpp',
    'tool_set_nc.cpp',
    'tool_add_keepout.cpp',
    'tool_helper_draw_net_setting.cpp',
    'tool_helper_get_symbol.cpp',
    'tool_change_symbol.cpp',
    'tool_place_refdes_and_value.cpp',
    'tool_helper_restrict.cpp',
    'tool_draw_polygon_circle.cpp',
    'tool_draw_connection_line.cpp',
    'tool_backannotate_connection_lines.cpp',
    'tool_import_kicad_package.cpp',
    'tool_smash_silkscreen_graphics.cpp',
    'tool_renumber_pads.cpp',
    'tool_fix.cpp',
    'tool_nopopulate.cpp',
    'tool_polygon_to_line_loop.cpp',
    'tool_place_board_panel.cpp',
    'tool_smash_panel_outline.cpp',
    'tool_smash_package_outline.cpp',
    'tool_resize_symbol.cpp',
    'tool_round_off_vertex.cpp',
    'tool_swap_gates.cpp',
    'tool_swap_placement.cpp',
    'tool_place_picture.cpp',
    'tool_place_decal.cpp',
    'tool_drag_polygon_edge.cpp',
    'tool_measure.cpp',
    'tool_edit_custom_value.cpp',
    'tool_place_dot.cpp',
    'tool_set_track_width.cpp',
    'tool_settings_rectangle_mode.cpp',
    'tool_exchange_gates.cpp',
    'tool_map_port.cpp',
    'tool_add_block_instance.cpp',
    'tool_helper_save_placements.cpp',
    'tool_align_and_distribute.cpp',
    'tool_helper_edit_plane.cpp',
    'tool_manage_power_nets.cpp',
    'tool_edit_table.cpp',
    'tool_edit_text.cpp',
    'tool_tie_nets.cpp',
    'tool_draw_net_tie.cpp',
    'tool_flip_net_tie.cpp',
    'tool_move_track_connection.cpp',
    'tool_helper_pick_pad.cpp',
    'tool_move_track_center.cpp',
    'tool_paste_placement.cpp',
    'tool_paste_part.cpp',
    'tool_add_height_restriction.cpp',
)
